# strusBindings

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  COPYING  GNUmakefile  GNUmakefile.old  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  LICENSE.3rdParty  README  TODO  variables.mk
lang/: CMakeLists.txt
lang/doxygen_include/: swig.hpp
lang/java/: CMakeLists.txt  exception_handler.i  gen_namespace__i.sh  java_heap.i  objInitializers.cpp  objInitializers.hpp  std_vector.i  strus.i
lang/php/: CMakeLists.txt  exception_handler.i  ignore_declarations.i  objInitializers.cpp  objInitializers.hpp  php.ini.in  std_vector_double.i  std_vector_int.i  std_vector_rank.i  std_vector_string.i  std_vector_term.i  std_vector_vecrank.i  strus.i  strus_aggregator.i  strus_normalizer.i  strus_patternmatcher.i  strus_queryexpr.i  strus_queryresult.i  strus_scalarfunc.i  strus_statistics.i  strus_summarizer.i  strus_tokenizer.i  strus_variant.i  strus_weighting.i
lang/python/: CMakeLists.txt  bindingObjectsExt.cpp  genInterface.pl  genInterface.sh  objInitializers.cpp  objInitializers.hpp  strusPythonModule.cpp
lang/python.swig/: CMakeLists.txt  ignore_declarations.i  objInitializers.cpp  objInitializers.hpp  std_vector_rank.i  std_vector_string.i  std_vector_term.i  strus.i  strus_aggregator.i  strus_normalizer.i  strus_std_string.i  strus_weighting.i
luabind/: CMakeLists.txt
src/: CMakeLists.txt  GNUmakefile  bindingObjects.cpp  bindingObjectsImpl.cpp  bindingObjectsImpl.hpp  bindingUtils.cpp  bindingUtils.hpp  callResultUtils.hpp  deserializer.cpp  deserializer.hpp  expressionBuilder.cpp  expressionBuilder.hpp  hostObjectReference.hpp  implTraits.hpp  internationalization.cpp  internationalization.cpp.in  libstrus_bindings_description.cpp  papugaErrorException.cpp  papugaErrorException.hpp  papugaSerialization.hpp  patternMatcherLoader.cpp  patternMatcherLoader.hpp  queryAnalyzerStruct.hpp  serialization.hpp  serializer.cpp  serializer.hpp  structDefs.cpp  structDefs.hpp  structNameMap.cpp  structNameMap.hpp  strusBindingsModuleGen.cpp  strusLua.cpp  strusObjects.cpp  testcheck.cpp  traceUtils.cpp  utils.cpp  utils.hpp  valueVariantConv.cpp  valueVariantConv.hpp  valueVariantWrap.cpp  (+6 more)
src/bindings/: CMakeLists.txt  callResultUtils.cpp  callResultUtils.hpp  deserializer.cpp  deserializer.hpp  errorUtils.hpp  expressionBuilder.cpp  expressionBuilder.hpp  hostObject.hpp  implTraits.hpp  metadataop.cpp  metadataop.hpp  papugaErrorException.cpp  papugaSerialization.hpp  patternMatcherLoader.cpp  patternMatcherLoader.hpp  queryAnalyzerStruct.hpp  serializer.cpp  serializer.hpp  structDefs.cpp  structDefs.hpp  structNameMap.cpp  structNameMap.hpp  traceProxy.cpp  traceProxy.hpp  traceUtils.cpp  traceUtils.hpp  utils.cpp  utils.hpp  valueVariantWrap.cpp  valueVariantWrap.hpp
src/filter/: CMakeLists.txt  README  analyzerAttributeFilter.cpp  analyzerAttributeFilter.hpp  analyzerDocumentFilter.cpp  analyzerDocumentFilter.hpp  analyzerMetaDataFilter.cpp  analyzerMetaDataFilter.hpp  analyzerTermFilter.cpp  analyzerTermFilter.hpp  attributeFilter.cpp  attributeFilter.hpp  documentFilter.cpp  documentFilter.hpp  documentFrequencyChangeFilter.cpp  documentFrequencyChangeFilter.hpp  doubleArrayFilter.cpp  doubleArrayFilter.hpp  intArrayFilter.cpp  intArrayFilter.hpp  metaDataFilter.cpp  metaDataFilter.hpp  queryElementFilter.cpp  queryElementFilter.hpp  queryFilter.cpp  queryFilter.hpp  queryInstructionFilter.cpp  queryInstructionFilter.hpp  queryResultFilter.cpp  queryResultFilter.hpp  resultDocumentFilter.cpp  resultDocumentFilter.hpp  stateTable.hpp  statisticsMessageFilter.cpp  statisticsMessageFilter.hpp  stringArrayFilter.cpp  stringArrayFilter.hpp  structElementArray.hpp  summaryElementFilter.cpp  summaryElementFilter.hpp  (+9 more)
src/impl/: analyzedQuery.hpp  analyzer.cpp  analyzer.hpp  context.cpp  context.hpp  objectref.hpp  query.cpp  query.hpp  statistics.cpp  statistics.hpp  storage.cpp  storage.hpp  struct.hpp  vector.cpp  vector.hpp  vectorStorage.cpp  vectorStorage.hpp
src/lang/: CMakeLists.txt
src/parser/: CMakeLists.txt  fillTypeTables.cpp  fillTypeTables.hpp  interfaceParser.cpp  interfaceParser.hpp  printFrame.cpp  printFrame.hpp  strusBindingsGen.cpp  strusBindingsInterfaceGen.cpp
src/utils/: CMakeLists.txt  internationalization.cpp  internationalization.cpp.in
src/webrequest/: CMakeLists.txt  configuration.cpp  configuration.hpp  configurationHandler.cpp  configurationHandler.hpp  configurationUpdateRequest.cpp  configurationUpdateRequest.hpp  curlEventLoop.cpp  curlEventLoop.hpp  curlLogger.cpp  curlLogger.hpp  curlMessage.cpp  curlMessage.hpp  libstrus_webrequest.cpp  papugaContextRef.hpp  papugaLoggerFunctions.cpp  papugaLoggerFunctions.hpp  papugaLuaReqestHandlerRef.hpp  papugaLuaRequestHandlerRef.hpp  pathBuf.hpp  schemas.hpp  schemas_analyzer.hpp  schemas_analyzer_decl.hpp  schemas_base.cpp  schemas_base.hpp  schemas_contentstats.hpp  schemas_context.hpp  schemas_distquery.hpp  schemas_document.hpp  schemas_expression.hpp  schemas_expression_decl.hpp  schemas_inserter.hpp  schemas_query.hpp  schemas_query_decl.hpp  schemas_queryeval_decl.hpp  schemas_statistics.hpp  schemas_storage.hpp  schemas_storage_decl.hpp  schemas_vector.hpp  schemas_vector_decl.hpp  (+29 more)
src/webrequest_luasim/: CMakeLists.txt  blockingCurlClient.cpp  blockingCurlClient.hpp  strusWebRequestLuaSim.cpp
swig/: CMakeLists.txt  GNUmakefile  GNUmakefile.old  exception_handler.i  ignore_declarations.i  std_vector_rank.i  std_vector_string.i  std_vector_term.i  strus.i  strus_aggregator.i  strus_normalizer.i  strus_statfunc.i  strus_summarizer.i  strus_tokenizer.i  strus_variant.i  strus_weighting.i  variant_type.i
swig/doxygen_include/: swig.hpp
swig/java/: CMakeLists.txt  context.i  exception_handler.i  ignore_declarations.i  newobject.i  objInitializers.cpp  objInitializers.hpp  std_vector.i  std_vector_rank.i  std_vector_string.i  std_vector_term.i  strus.i  strus_aggregator.i  (+5 more)
tests/: CMakeLists.txt  GNUmakefile
(+1034 files in other folders)
